[package]
name = "netutil-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI libraries
ratatui = "0.28"
crossterm = "0.28"

# Network interface information
nix = { version = "0.29", features = ["net"] }
if-addrs = "0.13"

# DNS resolution
resolv-conf = "0.7"

# Clipboard support
arboard = "3.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime for network operations
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.6"
